# snakes-and-ladders-bot

./: .pre-commit-config.yaml  README.md  bot.py  pyproject.toml  sample.config.py
boards/: __init__.py  board_lists.py
boards/Simple/: board.csv
boards/minimal/: board.csv
sal/: __init__.py  board.py
